Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanObject.quorum
class Main
    action Main
        Object v
        Test(v)
    end

    action Test(boolean var)
    end
end
